# M365

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_WORKFORCE_COMPLETE_IMPLEMENTATION_GUIDE.md  AI_WORKFORCE_DETAILED_SPECIFICATIONS.md  AI_WORKFORCE_INTERACTIVE_DASHBOARD_SPECS.md  AI_WORKFORCE_PROJECT_TEMPLATE.md  CHANGELOG.md  CODEOWNERS  CODEX_IMPLEMENTATION_PROMPT.md  COMPLETE_M365_PLATFORM_OVERVIEW.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Dockerfile.ops-adapter  EXECUTION_PLAN.md  HOW_TO_USE_M365_PLATFORM.md  LICENSE  M365_PROJECT_MANAGEMENT_SETUP_COMPLETE.md  M365_SETUP_GUIDE.md  M365_SETUP_SUMMARY.md  MICROSOFT_OAUTH_SETUP.md  Makefile  Makefile.ai  Makefile.common  Makefile.dev  README.md  REPOSITORY_ANALYSIS_DEMONSTRATION.md  SECURITY.md  SMARTHAUS_WEBSITE_ANALYSIS_COMPLETE.md  SMARTHAUS_WEBSITE_REVERSE_ENGINEERED_PLAN.md  TAI_M365_PLATFORM_STATUS.md  TAI_M365_SETUP_GUIDE.md  VERCEL_DEPLOYMENT.md  WEBSITE_M365_PROJECT_MANAGEMENT.md  add_group_owners.sh  add_teams_webhooks.ps1  create-teams-from-groups.ps1  create_teams_simple.ps1  (+16 more)
Operations/: ACTION_LOG.md  EXECUTION_PLAN.md  NORTHSTAR.md  PROJECT_FILE_INDEX.md  STATUS.md
api/: status.js
artifacts/: b4d1_failure_inventory.json  b4d3_failure_inventory.json  b4d4_failure_inventory.json  b4d4d_failure_inventory.json  b4d5_validation_handoff.json  b4e_full_repo_validation_closure.json  b7d_executor_permission_matrix.json  b7d_live_executor_validation.json  b7e_approval_backend_reproof.json
codex/: CODEX_OPERATING_RULE.mdc  CODEX_PLAYBOOK.md  CODEX_PROFILE.md
config/: lql_reverse_engineered_plan.json  project_management.json  services.json
configs/: ma_phases.yaml
data/: agent_instructions_m365-administrator.json  c2_security.json  clients_projects.json  infra_cicd.json  lattice_aios.json  lattice_research.json  m365_instruction_idempotency.json  marketing_leads.json  patents_applications.json  research_collaboration.json  sigma_performance.json  smarthaus_website_projects.json  tai_performance.json  tai_research.json  website_updates.json
docker/: entrypoint.sh
docs/: AGENTS_APP_SETUP.md  AGENTS_PROVISIONING.md  AGENT_API.md  CAIO_M365_CONTRACT.md  CAPABILITIES_AND_AGENTS.md  CURSOR_CLI_AUTONOMOUS_AGENT_PLAN.md  ENV.md  INVESTOR_RELATIONS_DOCX_UPLOAD.md  LOCAL_TEST_LICENSED_RUNTIME.md  M365_MA_INDEX.md  M365_SERVER_APP.md  NORTH_STAR.md  OPERATIONS.md  PERSONAS_AGENTS_AND_CAIO_EDGE.md  RUNNING_AND_REACHABILITY.md  TAI_LICENSED_MODULE_MODEL.md  TROUBLESHOOTING_SHARED_MAILBOXES.md  WEBSITE_INTEGRATION.md  architecture.md  enterprise_setup.md  github-workflow-template.yml  m365_capability_map.md  powerapps.md  powerbi.md
flows/: README.md
instances/: sandbox.env  sandbox.env.example
invariants/: INDEX.yaml  INV-CAIO-M365-001.yaml  INV-CAIO-M365-002.yaml  INV-CAIO-M365-003.yaml  INV-M365-AUDIT-001.yaml
monitoring/: prometheus.yml
notebooks/: m365_contracts.ipynb  ma_caio_m365_contract.ipynb  ma_m365_audit.ipynb  ma_m365_auth.ipynb  ma_m365_batch1_groups.ipynb  ma_m365_idempotency.ipynb  ma_m365_master.ipynb
policies/: ops.rego
powerbi/: README.md  agent-performance-dashboard.pbix  department-metrics-dashboard.pbix  workflow-analytics-dashboard.pbix
production/: README.md
registry/: activated_persona_surface_v1.yaml  admin_governance_surface_expansion_v2.yaml  agents.yaml  ai_team.json  approval_risk_matrix_v2.yaml  auth_model_v2.yaml  permission_tiers.yaml  (+51 more)
(+2065 files in other folders)
