[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smarthaus-m365"
version = "0.1.0"
description = "SmartHaus Group M365 SOA: libraries, API, and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "SmartHaus Group"}]
keywords = ["microsoft-365", "graph", "soA", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "msal>=1.33.0",
    "pydantic>=2.6.0",
    "tenacity>=8.2.3",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "types-requests>=2.32.0.20240521",
    "respx>=0.21.1",
    "responses>=0.25.3",
    "pre-commit>=3.7.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
