[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smarthaus-m365"
version = "0.1.0"
description = "SMARTHAUS M365 SOA: libraries, API, and CLI"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Proprietary"}
authors = [{name = "SMARTHAUS"}]
keywords = ["microsoft-365", "graph", "soA", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "msal>=1.33.0",
    "pydantic>=2.6.0",
    "tenacity>=8.2.3",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    "jinja2>=3.1.4",
    "aiohttp>=3.9.0",
    "schedule>=1.2.0",
    "starlette>=0.36.0",
    "azure-identity>=1.17.1",
    "azure-keyvault-secrets>=4.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
m365-server = "m365_server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.0.20240521",
    "respx>=0.21.1",
    "responses>=0.25.3",
    "pre-commit>=3.7.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
